--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -17,5 +19,8 @@
     "url": "https://github.com/olamilekanszn/React-Udemy/issues"
   },
   "homepage": "https://github.com/olamilekanszn/React-Udemy#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "vite": "^7.1.10"
+  }
 }
