--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   "homepage": "https://github.com/olamilekanszn/React-Udemy#readme",
   "description": "",
   "dependencies": {
-    "vite": "^7.1.10"
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "vite": "^7.1.10",
+    "@vitejs/plugin-react": "^5.0.4"
+  },
+  "devDependencies": {
+    
   }
 }
